--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <main class="content">
             <div class="lead">
-                <h1 class="lead__title">Путешествия по России</h1>
+                <h1 class="lead__title">ЫЫЫЫ</h1>
                 <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
                 <img class="lead__image" src="./images/lead-polka.jpg" alt="Спящая девушка">
                 <p class="lead__caption">Ваша полка - верхняя</p>
