--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
-    <link rel="stylesheet" href="../pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         </header>
         <main class="content">
             <div class="lead">
-                <h1 class="lead__title">sssss/h1>
+                <h1 class="lead__title">Путешествия по России</h1>
                 <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
                 <img class="lead__image" src="./images/lead-polka.jpg" alt="Спящая девушка">
                 <p class="lead__caption">Ваша полка - верхняя</p>
